--- a/modular-monolith/pom.xml
+++ b/modular-monolith/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jag.catch-a-flight</groupId>
+    <groupId>jah.catch-a-flight</groupId>
     <artifactId>aggregate</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
@@ -21,6 +21,16 @@
     </properties>
 
     <modules>
+        <module>account</module>
+        <module>api-simulator</module>
+        <module>application</module>
+        <module>common</module>
+        <module>bestdeal</module>
+        <module>booking</module>
+        <module>engagement</module>
+        <module>order</module>
+        <module>query</module>
+        <module>shared-kernel</module>
     </modules>
 
     <dependencyManagement>
