Replace "Catch A Flight" by "Catch a Flight"

--- a/modular-monolith/api-simulator/pom.xml
+++ b/modular-monolith/api-simulator/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>api-simulator</artifactId>
-    <name>Catch A Flight :: API Simulator</name>
+    <name>Catch a Flight :: API Simulator</name>
 
     <dependencies>
         <dependency>
