--- a/modular-monolith/booking/pom.xml
+++ b/modular-monolith/booking/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>booking</artifactId>
-    <name>Catch A Flight :: Booking</name>
+    <name>Catch a Flight :: Booking</name>
 
     <dependencies>
         <dependency>
