--- a/modular-monolith/account/pom.xml
+++ b/modular-monolith/account/pom.xml
@@ -8,7 +8,7 @@
     </parent>
 
     <artifactId>account</artifactId>
-    <name>Catch A Flight :: Account</name>
+    <name>Catch a Flight :: Account</name>
 
     <dependencies>
         <dependency>
