--- a/modular-monolith/pom.xml
+++ b/modular-monolith/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>Catch A Flight</name>
+    <name>Catch a Flight</name>
 
     <properties>
         <java.version>24</java.version>
