--- a/modular-monolith/account/pom.xml
+++ b/modular-monolith/account/pom.xml
@@ -18,11 +18,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <artifactId>spring-boot-starter-data-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-jdbc</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>jah.catch-a-flight</groupId>
@@ -35,4 +35,5 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+
 </project>
