--- a/modular-monolith/application/pom.xml
+++ b/modular-monolith/application/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>jah.catch-a-flight</groupId>
-        <artifactId>aggregate</artifactId>
+        <artifactId>modular-monolith</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
