--- a/modular-monolith/account/pom.xml
+++ b/modular-monolith/account/pom.xml
@@ -26,6 +26,11 @@
         </dependency>
         <dependency>
             <groupId>jah.catch-a-flight</groupId>
+            <artifactId>event</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jah.catch-a-flight</groupId>
             <artifactId>common</artifactId>
             <version>${project.version}</version>
         </dependency>
