--- a/modular-monolith/modules/application/pom.xml
+++ b/modular-monolith/modules/application/pom.xml
@@ -11,6 +11,10 @@
     <artifactId>application</artifactId>
     <name>Catch a Flight :: Application</name>
 
+    <properties>
+        <springdoc.version>2.8.5</springdoc.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -19,6 +23,11 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>jah.catch-a-flight.modular-monolith.modules</groupId>
